fixing on mobile

--- a/styles.css
+++ b/styles.css
@@ -349,16 +349,16 @@ article {
     padding: 10px;
   }
   #header{
-    width: 100vw;
+    width: 80vw;
     flex-direction: column;
   }
   .rectangle {
-    width: 90%; 
+    width: 70vw; 
     height: 100vh; 
     background-size: contain;
     background-repeat: no-repeat;
     padding: 2px; 
-    margin: 10px 0px; 
+    margin: 0px 0px; 
     border-radius: 0;
     box-shadow: none; 
   }
@@ -383,10 +383,10 @@ article {
   .step:last-child {
     margin-bottom: 50rem;
   }
-
   #swensens_parallax{
     background-color: #5f6d72;
     background-image: none;
+    height: 400vh;
   }
   .swensens-textbox{
     width: 50%;
@@ -408,7 +408,8 @@ article {
   }
 
   #mitchells_parallax{
-    background-size: auto 100%;;
+    background-size: auto 100%;
+    height: 350vh;
   }
   .mitchells-p{
     margin-bottom: 30px;
@@ -441,6 +442,7 @@ article {
   #lush_parallax{
     background-color: #af9c78;
     background-image: none;
+    height: 250vh;
   }
 
 
